--- a/index.html
+++ b/index.html
@@ -497,10 +497,11 @@
         for (let c = 0; c < cols; c++) {
           const thisTileW = baseTileW + (c < extraW ? 1 : 0);
 
-          const canvas = document.createElement('canvas');
-          canvas.width = thisTileW;
-          canvas.height = thisTileH;
-          const ctx = canvas.getContext('2d');
+          // 先按照网格切出原始小块
+          const rawCanvas = document.createElement('canvas');
+          rawCanvas.width = thisTileW;
+          rawCanvas.height = thisTileH;
+          const ctx = rawCanvas.getContext('2d');
           ctx.drawImage(
             img,
             startX + localSx,
@@ -513,7 +514,10 @@
             thisTileH
           );
 
-          canvas.toBlob(function (blob) {
+          // 在小块内部做一次内容检测与居中，让表情更靠近正中心
+          const centeredCanvas = centerTileContent(rawCanvas);
+
+          centeredCanvas.toBlob(function (blob) {
             onTile(blob, index, r, c);
           }, 'image/png');
 
@@ -522,6 +526,124 @@
         }
         localSy += thisTileH;
       }
+    }
+
+    // 对单个表情小图做二次内容检测，并向中间微调，使表情更加居中
+    function centerTileContent(srcCanvas) {
+      const W = srcCanvas.width;
+      const H = srcCanvas.height;
+      if (!W || !H) return srcCanvas;
+
+      const ctx = srcCanvas.getContext('2d');
+      const imageData = ctx.getImageData(0, 0, W, H);
+      const data = imageData.data;
+
+      function getPixel(x, y) {
+        const idx = (y * W + x) * 4;
+        return {
+          r: data[idx],
+          g: data[idx + 1],
+          b: data[idx + 2],
+          a: data[idx + 3]
+        };
+      }
+
+      // 估计当前小图的背景色（四个角）
+      const cornerSamples = [
+        getPixel(0, 0),
+        getPixel(W - 1, 0),
+        getPixel(0, H - 1),
+        getPixel(W - 1, H - 1)
+      ];
+
+      let bg = null;
+      for (let i = 0; i < cornerSamples.length; i++) {
+        const p = cornerSamples[i];
+        if (p.a > 0) {
+          bg = p;
+          break;
+        }
+      }
+      if (!bg) {
+        bg = { r: 255, g: 255, b: 255, a: 0 };
+      }
+
+      const alphaThreshold = 8;    // alpha 小于此值认为是空白
+      const colorTolerance = 18;   // 与背景色差异小于此值认为是空白
+
+      let minX = W;
+      let minY = H;
+      let maxX = -1;
+      let maxY = -1;
+
+      for (let y = 0; y < H; y++) {
+        for (let x = 0; x < W; x++) {
+          const idx = (y * W + x) * 4;
+          const r = data[idx];
+          const g = data[idx + 1];
+          const b = data[idx + 2];
+          const a = data[idx + 3];
+
+          if (a <= alphaThreshold) continue;
+
+          const dr = Math.abs(r - bg.r);
+          const dg = Math.abs(g - bg.g);
+          const db = Math.abs(b - bg.b);
+          if (dr <= colorTolerance && dg <= colorTolerance && db <= colorTolerance) {
+            continue;
+          }
+
+          if (x < minX) minX = x;
+          if (x > maxX) maxX = x;
+          if (y < minY) minY = y;
+          if (y > maxY) maxY = y;
+        }
+      }
+
+      // 没检测到内容或内容几乎铺满整个格子，直接返回
+      if (maxX < minX || maxY < minY) return srcCanvas;
+
+      const contentW = maxX - minX + 1;
+      const contentH = maxY - minY + 1;
+      if (contentW >= W - 2 && contentH >= H - 2) {
+        return srcCanvas;
+      }
+
+      // 在内容外侧留一点安全边距，避免裁得过紧
+      const pad = Math.floor(Math.min(W, H) * 0.12);
+      let sx = Math.max(0, minX - pad);
+      let sy = Math.max(0, minY - pad);
+      let ex = Math.min(W - 1, maxX + pad);
+      let ey = Math.min(H - 1, maxY + pad);
+      let roiW = ex - sx + 1;
+      let roiH = ey - sy + 1;
+
+      // 输出仍然保持统一尺寸 W x H，只是把内容移动到中央
+      const dst = document.createElement('canvas');
+      dst.width = W;
+      dst.height = H;
+      const dctx = dst.getContext('2d');
+
+      const bgAlpha = (bg.a || 0) / 255;
+      dctx.fillStyle = 'rgba(' + bg.r + ',' + bg.g + ',' + bg.b + ',' + bgAlpha + ')';
+      dctx.fillRect(0, 0, W, H);
+
+      const dx = Math.round((W - roiW) / 2);
+      const dy = Math.round((H - roiH) / 2);
+
+      dctx.drawImage(
+        srcCanvas,
+        sx,
+        sy,
+        roiW,
+        roiH,
+        dx,
+        dy,
+        roiW,
+        roiH
+      );
+
+      return dst;
     }
 
     function downloadZip() {
